kubernetes/test/demos/demo1/rsc/scheduler-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${SCHEDULER}
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${SCHEDULER}
    env: ${ENV}
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ${SCHEDULER}
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ${SCHEDULER}
        env: ${ENV}
    spec:
      serviceAccountName: ${SCHEDULER}
      nodeSelector:
        node-role.kubernetes.io/control-plane: "true"
      containers:
        - name: ${SCHEDULER}
          image: ${REGISTRY}:${REGISTRY_PORT}/${SCHED_IMG}
          imagePullPolicy: IfNotPresent
          command: [ "python3", "-m", "app", "-v" ]
      restartPolicy: Always
---
