kubernetes/test/demos/demo1/rsc/pdc-daemon-cluster.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ${PDC}
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${PDC}
    env: demo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ${PDC}
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ${PDC}
        env: demo
    spec:
      nodeSelector:
        connector.dataspace.ptx.org/enabled: "true"
      serviceAccountName: ${PDC}
      containers:
        - name: connector
          image: ${REGISTRY}:${REGISTRY_PORT}/${PDC_IMG}
          imagePullPolicy: IfNotPresent
          ports:
            - name: pdc-port
              containerPort: ${PDC_PORT}
              protocol: TCP
              hostPort: ${PDC_NODE_PORT}
          resources:
            requests:
              cpu: 500m
              memory: 250Mi
          volumeMounts:
            - name: env
              mountPath: "/usr/src/app/.env.production"
              subPath: .env.production
              readOnly: true
            - name: config-template
              mountPath: "/usr/src/app/dist/src/config.json.tmp"
              subPath: config.json.tmp
              readOnly: true
            - name: entrypoint
              mountPath: /usr/src/app/docker/scripts/entrypoint.sh
              subPath: entrypoint.sh
              readOnly: true
          command: [ "/bin/sh", "/usr/src/app/docker/scripts/entrypoint.sh" ]
          args: [ "npm", "run", "start" ]
      volumes:
        - name: env
          configMap:
            name: ${PDC}-config
            items:
              - key: .env
                path: .env.production
        - name: config-template
          configMap:
            name: ${PDC}-config
            items:
              - key: config.json
                path: config.json.tmp
        - name: entrypoint
          configMap:
            name: ${PDC}-config
            items:
              - key: entrypoint.sh
                path: entrypoint.sh
        - name: kube-api-client-cfg
          projected:
            defaultMode: 420
            sources:
              - serviceAccountToken:
                  expirationSeconds: 3607
                  path: token
              - configMap:
                  items:
                    - key: ca.crt
                      path: ca.crt
                  name: kube-root-ca.crt
              - downwardAPI:
                  items:
                    - fieldRef:
                        apiVersion: v1
                        fieldPath: metadata.namespace
                      path: namespace
---
apiVersion: v1
kind: Service
metadata:
  name: ${PDC}-${PZ_A}
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${PDC}
    env: demo
spec:
  selector:
    app.kubernetes.io/name: ${PDC}
    privacy-zone.dataspace.ptx.org/default: ${PZ_A}
  type: ClusterIP
  ports:
    - name: pdc-port
      port: ${PDC_PORT}
---
apiVersion: v1
kind: Service
metadata:
  name: ${PDC}-${PZ_B}
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${PDC}
    env: demo
spec:
  selector:
    app.kubernetes.io/name: ${PDC}
    privacy-zone.dataspace.ptx.org/default: ${PZ_B}
  type: ClusterIP
  ports:
    - name: pdc-port
      port: ${PDC_PORT}
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ${PDC}-${PZ_A}-stripprefix
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${PDC}
    env: demo
spec:
  stripPrefix:
    prefixes:
      - /${PDC_PREFIX_A}
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ${PDC}-${PZ_B}-stripprefix
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${PDC}
    env: demo
spec:
  stripPrefix:
    prefixes:
      - /${PDC_PREFIX_B}
---
#apiVersion: traefik.io/v1alpha1
#kind: IngressRoute
#metadata:
#  name: ${PDC}-${PZ_A}
#  namespace: ${PTX}
#  labels:
#    app.kubernetes.io/name: ${PDC}
#    env: demo
#spec:
#  entryPoints:
#    - web
#  routes:
#    - match: PathPrefix(`/${PDC_PREFIX_A}`)
#      kind: Rule
#      services:
#        - name: ${PDC}-${PZ_A}
#          port: ${PDC_PORT}
#      middlewares:
#        - name: ${PDC}-${PZ_A}-stripprefix
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${PDC}-${PZ_A}
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${PDC}
    env: demo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: ${PTX}-${PDC}-${PZ_A}-stripprefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: ${LB_DOMAIN}
      http:
        paths:
          - path: /${PDC_PREFIX_A}
            pathType: Prefix
            backend:
              service:
                name: ${PDC}-${PZ_A}
                port:
                  number: ${PDC_PORT}
---
#apiVersion: traefik.io/v1alpha1
#kind: IngressRoute
#metadata:
#  name: ${PDC}-${PZ_B}
#  namespace: ${PTX}
#  labels:
#    app.kubernetes.io/name: ${PDC}
#    env: demo
#spec:
#  entryPoints:
#    - web
#  routes:
#    - match: PathPrefix(`/${PDC_PREFIX_B}`)
#      kind: Rule
#      services:
#        - name: ${PDC}-${PZ_B}
#          port: ${PDC_PORT}
#      middlewares:
#        - name: ${PDC}-${PZ_B}-stripprefix
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${PDC}-${PZ_B}
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${PDC}
    env: demo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: ${PTX}-${PDC}-${PZ_B}-stripprefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: ${LB_DOMAIN}
      http:
        paths:
          - path: /${PDC_PREFIX_B}
            pathType: Prefix
            backend:
              service:
                name: ${PDC}-${PZ_B}
                port:
                  number: ${PDC_PORT}
---
